--- a/14.1, 14.2/index.html
+++ b/14.1, 14.2/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Задачи к модулю №14 (AJAX)</h1>
-    <!-- <script src="t_14.1.js"></script> -->
+    <script src="t_14.1.js"></script>
     <!-- <script src="t_14.2.js"></script> -->
   </body>
 </html>
